--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ p {
 
 .works h1 {
     color: #000;
+    font-size: 40px;
 }
 
 .works_item {
@@ -246,6 +247,12 @@ p {
 
 .team {
     margin: 100px 0 70px;
+}
+
+.team h1 {
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .team__inner {
