--- a/css/style.css
+++ b/css/style.css
@@ -245,14 +245,51 @@ p {
     background-color: #cddcd5;
 }
 
-.works h1 {
-    color: #000;
+.works_title {
     font-size: 40px;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .works_item {
     margin: 0 auto;
 }
+
+/*==================================================================SLIDER*/
+.slick-track {
+    display: flex;
+}
+
+.slick-list {
+    overflow: hidden;
+}
+
+.slider {
+    position: relative;
+    padding: 0 50px;
+}
+.slider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    margin: -50px 0 0 0;
+    z-index: 10;
+    font-size: 0;
+    width: 100px;
+    height: 100px;
+    border: none;
+}
+
+.slider .slick-arrow.slick-prev {
+    left: 0;
+    background: url("../img/testimonials/loon-icon-arrow-left.svg") 0 0 / 100% no-repeat;
+}
+
+.slider .slick-arrow.slick-next {
+    right: 0;
+    background: url("../img/testimonials/loon-icon-arrow-right.svg") 0 0 / 100% no-repeat;
+}
+
+
 
 /* ==================================================================TEAM */
 
@@ -402,129 +439,6 @@ p {
     padding: 70px 0;
 }
 
-.slider_title {
-    font-size: 40px;
-    text-align: center;
-}
-
-.slider {
-    position: relative;
-    margin: 30px 0 40px 0;
-    text-align: center;
-}
-
-.slider_item {
-    margin: 0 auto;
-    max-width: 935px;
-    max-height: 600px;
-    text-align: center;
-}
-
-.slider_item p {
-    font-size: 19px;
-    font-style: italic;
-    color: #2A2D48;
-}
-
-/*.slider_item p {*/
-/*    text-align: center;*/
-/*}*/
-/* Слайдер */
-.slick-slider {
-}
-
-/* Слайдер запущен */
-.slick-slider.slick-initialized {
-}
-
-/* Слайдер с точками */
-.slick-slider.slick-dotted {
-}
-
-/* Ограничивающая оболочка */
-.slick-list {
-    overflow: hidden;
-}
-
-/* Лента слайдов */
-.slick-track {
-    display: flex;
-}
-
-/* Слайд */
-.slick-slide {
-}
-
-/* Слайд активный (показывается) */
-.slick-slide.slick-active {
-}
-
-/* Слайд основной */
-.slick-slide.slick-current {
-}
-
-/* Слайд по центру */
-.slick-slide.slick-center {
-}
-
-/* Клонированный слайд */
-.slick-slide.slick-cloned {
-}
-
-/* Стрелка */
-.slick-arrow {
-}
-
-/* Стрелка влево */
-.slick-arrow.slick-prev {
-}
-
-/* Стрелка вправо */
-.slick-arrow.slick-next {
-}
-
-/* Стрелка не активная */
-.slick-arrow.slick-disabled {
-}
-
-/* Точки (булиты) */
-.slick-dots {
-}
-
-.slick-dots li {
-}
-
-/* Активная точка */
-.slick-dots li.slick-active {
-}
-
-/* Элемент точки */
-.slick-dots li button {
-}
-
-.slider .slick-arrow {
-    position: absolute;
-    top: 50%;
-    z-index: 10;
-    font-size: 0;
-    width: 100px;
-    height: 100px;
-    outline: none;
-    margin: -50px 0 0 0;
-}
-
-.slider .slick-arrow.slick-prev {
-    left: 0;
-    background: url('../img/testimonials/loon-icon-arrow-left.svg') 0 0 / 100% no-repeat;
-    border: none;
-}
-
-.slider .slick-arrow.slick-next {
-    right: 0;
-    background: url('../img/testimonials/loon-icon-arrow-right.svg') 0 0 / 100% no-repeat;
-    border: none;
-}
-
 .testimonials_avito {
     font-size: 30px;
     text-align: center;
@@ -535,9 +449,6 @@ p {
 }
 
 /* ===================================================================FOOTER */
-/*p {*/
-/*    margin: 0;*/
-/*}*/
 
 .form {
     font-family: "Poppins", sans-serif;
