--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* font-family: 'Cardo', serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Raleway', sans-serif; */
-
 
 body {
     margin: 0;
@@ -302,13 +298,13 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .slider2 .slick-dots li,
 .slider .slick-dots li {
     list-style-type: none;
-    padding-left: 0px;
+    padding-left: 0;
     margin: 0 10px;
 }
 
